add build gate agent, change build model
